Fixing up some layout issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -61,9 +61,10 @@ footer.footer{
 }
 
 .navbar {
+  height:60px;
+  margin-bottom:10px;
   i {
     font-size: 3em;
-    color: $green;
   }
   .navbar-icon {
     padding-bottom: 0;
@@ -86,15 +87,15 @@ html, body{
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 740px;
+  height:60%;
+  min-height: 240px;
   z-index:-9999;
 }
 
-.fill-minus-navbar{
-  height: calc(100% - 160px);
-}
 .landing-plan{
-  height:740px;
+  height:60%;
+  width:100%;
+  min-height:240px;
   display:flex;
   justify-content:center;
 }
@@ -117,11 +118,43 @@ html, body{
   width:100%;
 }
 
-
-
-
-
-
+#splash-search-form select {
+  width: initial;
+}
+#splash-search-form{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
+}
+#splash-search-form .block-one{
+  display:flex;
+  flex: 10 1 500px;
+  flex-wrap: wrap;
+  flex-direction:row;
+}
+#splash-search-form .block-two{
+  display:flex;
+  flex: 1 1 510px;
+  flex-wrap: wrap;
+  flex-direction:row;
+  justify-content: space-between;
+}
+#splash-search-form .block-one > *{
+  flex: 1 1 251px;
+}
+#splash-search-form .block-two > select{
+  flex: 1 1 190px;
+}
+#splash-search-form .block-two > datetimepicker{
+  flex: 1 1 290px;
+}
+#splash-search-form .block-two > button{
+  flex: 0 0 auto;
+}
+#main-template-container{
+  height: calc(100% - 70px);
+}
 
 
 
